ExpeditionThread fixed